Fix Mutashabihat UI issues, improve filters, and harmonize button styles. Also included tooltip alignment fixes.

--- a/app/assets/stylesheets/components/wraper.scss
+++ b/app/assets/stylesheets/components/wraper.scss
@@ -16,13 +16,15 @@
     margin-bottom: 0;
   }
 
-  &.callout-info{
+  &.callout-info {
     border-left-color: $info !important;
   }
-  &.callout-danger{
+
+  &.callout-danger {
     border-left-color: $danger !important;
   }
-  &.callout-warning{
+
+  &.callout-warning {
     border-left-color: $warning !important;
   }
 }
@@ -32,14 +34,14 @@
   border-color: #e5e5e5 #eee #eee;
   border-style: solid;
   border-width: 1px 0;
-  -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
-  box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+  -webkit-box-shadow: inset 0 3px 6px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 3px 6px rgba(0, 0, 0, .05);
   padding: 15px;
 
-  &.filters{
+  &.filters {
     padding: 45px 15px 15px;
 
-    &:after{
+    &:after {
       position: absolute;
       top: 15px;
       left: 15px;
@@ -52,17 +54,18 @@
     }
   }
 
-  .table-container{
+  .table-container {
     width: 100%;
     overflow-x: auto;
   }
 
-  table{
+  table {
     overflow-x: auto;
   }
 }
 
-.page-section.page-section-card, .section-card{
+.page-section.page-section-card,
+.section-card {
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -102,7 +105,8 @@
     border-radius: 4px;
   }
 
-  .pagination li a, .pagination li span {
+  .pagination li a,
+  .pagination li span {
     padding: 10px 16px;
     font-size: 18px;
     line-height: 1.3333333;
@@ -138,7 +142,8 @@
     }
   }
 
-  .btn, .help-block {
+  .btn,
+  .help-block {
     font-family: Roboto;
   }
 }
@@ -156,22 +161,36 @@
   }
 }
 
-.sort-icons{
-  position: relative;
+.sort-icons {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  line-height: 1;
+  margin-left: 4px;
 
-  .fa-sort-up{
-    position: absolute;
-  }
+  .fa {
+    font-size: 14px;
+    height: 8px;
+    display: flex;
+    align-items: center;
 
-  .fa{
-    font-size: 20px;
-     &:not(.active){
-       color: #cacaca;
-     }
+    &:not(.active) {
+      color: #ccc;
+    }
+
+    &.fa-sort-up {
+      margin-bottom: -2px;
+    }
+
+    &.fa-sort-down {
+      margin-top: -2px;
+    }
   }
 }
 
-.sort-link{
+.sort-link {
   cursor: pointer;
   text-decoration: none;
   transition: color 0.2s ease;
